--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,3 +1,9 @@
 {
-    "redirects": [{ "source": "/", "destination": "/api" }]
+    "redirects": [{ "source": "/", "destination": "/api" }],
+    "builds":[
+        {
+            "src": "requirements.txt",
+            "use": "@vercel/python"
+        }
+    ]
   }
