added emails, refined server structure

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "react-rsc": "^0.0.0",
     "string-width": "^7.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
