--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tabler/icons-react": "^3.5.0",
     "brace-expansion": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
+    "cookie": "^0.6.0",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
