--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
         "back-dev": "cd server && pip install -r requirements.txt && python index.py",
         "mail-dev": "cd email && npm i && npm run dev",
         "test": "cd client && npm i && npm run build"
+    },
+    "dependencies": {
+        "cookie": "^0.6.0",
+        "react-is": "^18.3.1"
+    },
+    "devDependencies": {
+        "@types/cookie": "^0.6.0",
+        "@types/react-is": "^18.3.0"
     }
 }
