--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "short",
+    "type": "module",
     "scripts": {
         "client-dev": "cd client && npm i && npm run dev",
         "back-dev": "cd server && pip install -r requirements.txt && python index.py",
@@ -7,7 +8,9 @@
         "test": "cd client && npm i && npm run build"
     },
     "dependencies": {
+        "@react-email/render": "^0.0.15",
         "cookie": "^0.6.0",
+        "nodemailer": "^6.9.13",
         "react-is": "^18.3.1"
     },
     "devDependencies": {
