--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "client-dev": "cd client && npm i && npm run dev",
         "back-dev": "cd server && pip install -r requirements.txt && python index.py",
-        "mail-dev": "cd server/mailing && npm i && npm run dev",
+        "mail-dev": "cd server/api/mailing && npm i && npm run dev",
         "test": "cd client && npm i && npm run build"
     },
     "dependencies": {
